[project]
name = "run-python-test-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthias Arzt", email = "arzt@mpi-cbg.de" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
]

[project.scripts]
run-python-test-uv = "run_python_test_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "pytest>=8.4.1",
]
